welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: ':' expected but '=' found.
def colonne(decalage:Int, motif = Array(Any)) {
                                ^Array2:35: error: identifier expected but '}' found.
} 
^Array2:37: error: Unmatched closing brace '}' ignored here
}
^